--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "webpack --config webpack.config.js"
   },
   "dependencies": {
+    "@polkadot/api": "^1.9.1",
+    "@polkadot/types": "^1.9.1",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
     "react": "^16.13.1",
