--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2"
   },
   "devDependencies": {
     "@types/webpack": "^4.41.10",
