--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@polkadot/api": "^1.9.1",
+    "@polkadot/react-hooks": "^0.39.1",
     "@polkadot/types": "^1.9.1",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
