--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,9 @@
     "plugin:@typescript-eslint/eslint-recommended",
 
     "plugin:prettier/recommended",
-    "prettier/@typescript-eslint"
+    "prettier/@typescript-eslint",
+
+    "plugin:react/recommended"
   ],
   "plugins": [
     "@typescript-eslint"
