modify webpack settings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "exclude": ["build/**/*"],
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
+    "target": "es6",
+    "module": "es6",
     "jsx": "react",
     "strict": true,
     "noImplicitAny": true,
