--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
   },
   "dependencies": {
     "@polkadot/api": "^1.9.1",
+    "@polkadot/api-contract": "^1.9.1",
+    "@polkadot/react-api": "^0.39.1",
+    "@polkadot/react-components": "^0.39.1",
     "@polkadot/react-hooks": "^0.39.1",
+    "@polkadot/react-signer": "^0.39.1",
     "@polkadot/types": "^1.9.1",
+    "@polkadot/ui-keyring": "^0.51.1",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
     "react": "^16.13.1",
