--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@polkadot/api": "^1.9.1",
     "@polkadot/api-contract": "^1.9.1",
+    "@polkadot/api-derive": "^1.10.1",
     "@polkadot/react-api": "^0.39.1",
     "@polkadot/react-components": "^0.39.1",
     "@polkadot/react-hooks": "^0.39.1",
@@ -20,12 +21,14 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@types/webpack": "^4.41.10",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.2",
     "eslint": "^6.8.0",
