--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "start": "webpack --config webpack.config.js"
   },
   "dependencies": {
-    "@polkadot/api": "^1.9.1",
+    "@polkadot/api": "^1.11.2",
     "@polkadot/api-contract": "^1.9.1",
-    "@polkadot/api-derive": "^1.10.1",
+    "@polkadot/app-contracts": "^0.39.1",
+    "@polkadot/app-extrinsics": "^0.39.1",
+    "@polkadot/app-storage": "^0.39.1",
+    "@polkadot/jsonrpc": "^1.7.1",
     "@polkadot/react-api": "^0.39.1",
     "@polkadot/react-components": "^0.39.1",
     "@polkadot/react-hooks": "^0.39.1",
+    "@polkadot/react-params": "^0.39.1",
     "@polkadot/react-signer": "^0.39.1",
-    "@polkadot/types": "^1.9.1",
-    "@polkadot/ui-keyring": "^0.51.1",
+    "@polkadot/ui-keyring": "^0.52.1",
+    "@polkadot/util-crypto": "^2.8.1",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
     "react": "^16.13.1",
