--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,8 @@
     "esModuleInterop": true,
     "experimentalDecorators": true
   },
-  "typeRoots": ["./node_modules/@types"]
+  "typeRoots": [
+    "./node_modules/@types",
+    "./types/**/*"
+  ]
 }
