--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@polkadot/api": "1.9.1",
     "@polkadot/api-contract": "^1.9.1",
     "@polkadot/app-contracts": "^0.39.1",
+    "@polkadot/app-explorer": "^0.39.1",
     "@polkadot/app-extrinsics": "^0.39.1",
     "@polkadot/app-storage": "^0.39.1",
     "@polkadot/jsonrpc": "^1.7.1",
