--- a/package.json
+++ b/package.json
@@ -7,27 +7,34 @@
     "start": "webpack --config webpack.config.js"
   },
   "resolutions": {
-    "@polkadot/api": "1.9.1",
-    "@polkadot/types": "1.9.1",
     "@polkadot/ui-keyring": "0.52.1"
   },
   "dependencies": {
-    "@polkadot/api": "1.9.1",
+    "@polkadot/api": "^1.9.1",
     "@polkadot/api-contract": "^1.9.1",
+    "@polkadot/api-derive": "^1.11.2",
     "@polkadot/app-contracts": "^0.39.1",
     "@polkadot/app-explorer": "^0.39.1",
     "@polkadot/app-extrinsics": "^0.39.1",
     "@polkadot/app-storage": "^0.39.1",
+    "@polkadot/extension-dapp": "^0.24.1",
     "@polkadot/jsonrpc": "^1.7.1",
     "@polkadot/react-api": "^0.39.1",
     "@polkadot/react-components": "^0.39.1",
     "@polkadot/react-hooks": "^0.39.1",
     "@polkadot/react-params": "^0.39.1",
     "@polkadot/react-signer": "^0.39.1",
+    "@polkadot/types": "^1.11.2",
+    "@polkadot/ui-assets": "^0.52.1",
     "@polkadot/ui-keyring": "^0.52.1",
     "@polkadot/util-crypto": "^2.8.1",
+    "@types/file-saver": "^2.0.1",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
+    "detect-browser": "^5.0.0",
+    "file-saver": "^2.0.2",
+    "html-loader": "^1.1.0",
+    "markdown-loader": "^5.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "semantic-ui-css": "^2.4.1",
