--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@types/file-saver": "^2.0.1",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
+    "css-loader": "^3.5.3",
     "detect-browser": "^5.0.0",
+    "file-loader": "^6.0.0",
     "file-saver": "^2.0.2",
     "html-loader": "^1.1.0",
     "markdown-loader": "^5.1.0",
@@ -43,7 +45,10 @@
     "react-dom": "^16.13.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "styled-components": "^5.1.0"
+    "style-loader": "^1.2.1",
+    "styled-components": "^5.1.0",
+    "ts-loader": "^7.0.2",
+    "url-loader": "^4.1.0"
   },
   "devDependencies": {
     "@types/webpack": "^4.41.10",
@@ -51,19 +56,13 @@
     "@typescript-eslint/parser": "^2.26.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.5.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
-    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.0.4",
-    "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^2.0.4",
-    "style-loader": "^1.1.3",
-    "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
-    "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-plugin-serve": "^0.12.1"
