--- a/.github/workflows/pr-any.yml
+++ b/.github/workflows/pr-any.yml
@@ -59,5 +59,5 @@ jobs:
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       run: |
         yarn install --frozen-lockfile
-        yarn prod:build
+        yarn build:main
 
