--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "html-loader": "^1.1.0",
     "jest": "^25.5.2",
     "markdown-loader": "^5.1.0",
+    "plasm-types": "^0.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "semantic-ui-css": "^2.4.1",
