--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@polkadot/ui-keyring": "0.52.1"
   },
   "dependencies": {
+    "@plasm/types": "^1.3.0",
     "@polkadot/api": "1.21.1",
     "@polkadot/api-contract": "^1.16.1",
     "@polkadot/api-derive": "^1.16.1",
@@ -47,7 +48,6 @@
     "html-loader": "^1.1.0",
     "jest": "^25.5.2",
     "markdown-loader": "^5.1.0",
-    "plasm-types": "^0.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "semantic-ui-css": "^2.4.1",
