--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "test": "jest ./src --passWithNoTests"
   },
   "resolutions": {
-    "@polkadot/api": "1.21.1",
-    "@polkadot/types": "1.21.1",
+    "@polkadot/api": "1.29.1",
+    "@polkadot/types": "1.29.1",
     "@polkadot/keyring": "2.11.1",
     "@polkadot/ui-keyring": "0.52.1"
   },
   "dependencies": {
     "@plasm/types": "^1.3.0",
-    "@polkadot/api": "1.21.1",
-    "@polkadot/api-contract": "^1.16.1",
-    "@polkadot/api-derive": "^1.16.1",
+    "@polkadot/api": "1.29.1",
+    "@polkadot/api-contract": "1.30.1",
+    "@polkadot/api-derive": "1.29.1",
     "@polkadot/app-contracts": "^0.39.1",
     "@polkadot/app-explorer": "^0.39.1",
     "@polkadot/app-extrinsics": "^0.39.1",
@@ -34,10 +34,10 @@
     "@polkadot/react-hooks": "^0.39.1",
     "@polkadot/react-params": "^0.39.1",
     "@polkadot/react-signer": "^0.39.1",
-    "@polkadot/types": "^1.21.1",
+    "@polkadot/types": "1.29.1",
     "@polkadot/ui-assets": "^0.52.1",
     "@polkadot/ui-keyring": "^0.52.1",
-    "@polkadot/util-crypto": "^2.8.1",
+    "@polkadot/util-crypto": "3.3.1",
     "@types/file-saver": "^2.0.1",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
